Added service account creation

--- a/kubernetes/cluster/apps/database/postgres/helm-release.yaml
+++ b/kubernetes/cluster/apps/database/postgres/helm-release.yaml
@@ -20,6 +20,7 @@ spec:
       interval: 5m
   values:
     serviceAccount:
+      create: true
       name: database-app
     global:
       storageClass: esxi01-storage-class
