--- a/kubernetes/cluster/apps/other-webapps/ghostfolio/ghostfolio-db-credentials.yaml
+++ b/kubernetes/cluster/apps/other-webapps/ghostfolio/ghostfolio-db-credentials.yaml
@@ -3,7 +3,7 @@ apiVersion: 'kubernetes-client.io/v1'
 kind: ExternalSecret
 metadata:
   name: ghostfolio-credentials
-  namespace: database
+  namespace: other-webapps
 spec:
   backendType: vault
   vaultMountPoint: kubernetes
