Added explicit port number

--- a/kubernetes/cluster/apps/other-webapps/ghostfolio/helm-release.yaml
+++ b/kubernetes/cluster/apps/other-webapps/ghostfolio/helm-release.yaml
@@ -29,6 +29,7 @@ spec:
           name: ghostfolio-credentials
     env:
       BASE_CURRENCY: CAD
+      PORT: 3333
     service:
       main:
         enabled: true
