--- a/kubernetes/cluster/apps/database/redis/kustomization.yaml
+++ b/kubernetes/cluster/apps/database/redis/kustomization.yaml
@@ -2,6 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - namespace.yaml
-  - postgres
-  - redis
+  - redis-password-secret.yaml
+#  - helm-release.yaml
