--- a/kubernetes/cluster/apps/other-webapps/ghostfolio/helm-release.yaml
+++ b/kubernetes/cluster/apps/other-webapps/ghostfolio/helm-release.yaml
@@ -30,6 +30,7 @@ spec:
     env:
       BASE_CURRENCY: CAD
       PORT: 3333
+      NODE_ENV: production
     service:
       main:
         enabled: true
