Added pv attributes to unifi

--- a/kubernetes/cluster/apps/admin/unifi/helm-release.yaml
+++ b/kubernetes/cluster/apps/admin/unifi/helm-release.yaml
@@ -48,4 +48,6 @@ spec:
     persistence:
       data:
         enabled: true
+        accessModes: ReadWriteOnce
+        size: 10Gi
         storageClass: esxi01-storage-class
