Trying to fix tls secrets

--- a/kubernetes/cluster/apps/file-sharing/nextcloud/helm-release.yaml
+++ b/kubernetes/cluster/apps/file-sharing/nextcloud/helm-release.yaml
@@ -37,9 +37,9 @@ spec:
       enabled: true
       annotations: {}
       tls:
-        - secretName: tamland-tls
-          hosts:
+        - hosts:
             - cloud.tam.land
+        secretName: tamland-tls
       labels: {}
       path: /
       pathType: Prefix
