Updated secret replication

--- a/kubernetes/cluster/apps/secrets/cluster-secrets/tamland-tls-clustersecret.yaml
+++ b/kubernetes/cluster/apps/secrets/cluster-secrets/tamland-tls-clustersecret.yaml
@@ -4,7 +4,10 @@ metadata:
   name: tamland-tls
   namespace: secrets
 matchNamespace:
-  - 'file-sharing'
+  - file-sharing
+  - other-webapps
+  - password-management
+  - smart-home
 avoidNamespaces:
   - 'admin'
   - 'default'
