--- a/kubernetes/cluster/apps/smart-home/hass/helm-release.yaml
+++ b/kubernetes/cluster/apps/smart-home/hass/helm-release.yaml
@@ -36,6 +36,10 @@ spec:
             paths:
               - path: /
                 pathType: Prefix
+        tls:
+          - secretname: tamland-tls
+            hosts:
+                - hass.tam.land
     persistence:
       config:
         enabled: true
