--- a/kubernetes/cluster/apps/other-webapps/ghostfolio/helm-release.yaml
+++ b/kubernetes/cluster/apps/other-webapps/ghostfolio/helm-release.yaml
@@ -42,3 +42,7 @@ spec:
             paths:
               - path: /
                 pathType: Prefix
+        tls:
+          - secretname: tamland-tls
+            hosts:
+                - portfolio.tam.land
