Disbaled bitcoind probes

--- a/kubernetes/cluster/apps/crypto/bitcoind/helm-release.yaml
+++ b/kubernetes/cluster/apps/crypto/bitcoind/helm-release.yaml
@@ -27,6 +27,13 @@ spec:
       tag: "22.0"
     env:
       TZ: America/Toronto
+    probes:
+      liveness:
+        enabled: false
+      readiness:
+        enabled: false
+      startup:
+        enabled: false
     service:
       main:
         enabled: true
