--- a/kubernetes/cluster/flux-bootstrap/helm-repos/kustomization.yaml
+++ b/kubernetes/cluster/flux-bootstrap/helm-repos/kustomization.yaml
@@ -3,6 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - anthonytam.yaml
+  - appscode.yaml
   - bitnami.yaml
   - blockchain-charts.yaml
   - external-secrets.yaml
