--- a/kubernetes/cluster/apps/admin/stash/stash-community-helm-release.yaml
+++ b/kubernetes/cluster/apps/admin/stash/stash-community-helm-release.yaml
@@ -25,7 +25,7 @@ spec:
       vault.hashicorp.com/agent-inject-secret-stash-license.txt: 'secret/backups/stash-licenses'
       vault.hashicorp.com/agent-inject-template-stash-license.txt: |
         {{- with secret "secret/backups/stash-licenses" -}}
-        {{ .Data.data.stash-license }}
+        {{ .Data.data.stashLicense }}
         {{- end -}}
     license: /vault/secrets/stash-license.txt
     serviceAccount:
