--- a/kubernetes/cluster/apps/password-management/helm-release.yaml
+++ b/kubernetes/cluster/apps/password-management/helm-release.yaml
@@ -20,8 +20,8 @@ spec:
       interval: 5m
   values:
     image:
-      repository: ghcr.io/k8s-at-home/vaultwarden
-      tag: v1.23.1
+      repository: vaultwarden/server
+      tag: v1.26.0
     ingress:
       main:
         enabled: true
