--- a/kubernetes/cluster/apps/password-management/helm-release.yaml
+++ b/kubernetes/cluster/apps/password-management/helm-release.yaml
@@ -21,7 +21,7 @@ spec:
   values:
     image:
       repository: vaultwarden/server
-      tag: v1.26.0
+      tag: 1.26.0
     ingress:
       main:
         enabled: true
