--- a/kubernetes/cluster/apps/password-management/helm-release.yaml
+++ b/kubernetes/cluster/apps/password-management/helm-release.yaml
@@ -39,15 +39,15 @@ spec:
               - path: /
                 pathType: Prefix
                 service:
-                  port: http
+                  port: 80
               - path: /notifications/hub/negotiate
                 pathType: Prefix
                 service:
-                  port: http
+                  port: 80
               - path: /notifications/hub
                 pathType: Prefix
                 service:
-                  port: websocket
+                  port: 3012
         tls:
           - secretName: tamland-tls
             hosts:
