Updated Ingress definitions

--- a/kubernetes/cluster/apps/other-webapps/ghostfolio/helm-release.yaml
+++ b/kubernetes/cluster/apps/other-webapps/ghostfolio/helm-release.yaml
@@ -43,6 +43,6 @@ spec:
               - path: /
                 pathType: Prefix
         tls:
-          - secretname: tamland-tls
+          - secretName: tamland-tls
             hosts:
                 - portfolio.tam.land
