--- a/kubernetes/cluster/apps/smart-home/hass/helm-release.yaml
+++ b/kubernetes/cluster/apps/smart-home/hass/helm-release.yaml
@@ -37,7 +37,7 @@ spec:
               - path: /
                 pathType: Prefix
         tls:
-          - secretname: tamland-tls
+          - secretName: tamland-tls
             hosts:
                 - hass.tam.land
     persistence:
