--- a/kubernetes/cluster/apps/secrets/vault/helm-release.yaml
+++ b/kubernetes/cluster/apps/secrets/vault/helm-release.yaml
@@ -22,7 +22,7 @@ spec:
     server:
       serviceAccount:
         create: true
-        name: vault-auth
+        name: vault-app
       standalone:
         enabled: true
         config: |
