--- a/kubernetes/cluster/apps/secrets/vault/auth-delegator.yaml
+++ b/kubernetes/cluster/apps/secrets/vault/auth-delegator.yaml
@@ -10,5 +10,5 @@ roleRef:
   name: system:auth-delegator
 subjects:
   - kind: ServiceAccount
-    name: vault-auth
+    name: vault-app
     namespace: secrets
