--- a/kubernetes/cluster/apps/vpn-gateway/helm-release.yaml
+++ b/kubernetes/cluster/apps/vpn-gateway/helm-release.yaml
@@ -34,13 +34,14 @@ spec:
     serviceAccount:
       create: true
       name: vpn-app
+    DNS: 192.168.242.1
     settings:
       VPN_INTERFACE: tun0
       VPN_BLOCK_OTHER_TRAFFIC: true
       VPN_TRAFFIC_PORT: 1194
-      NOT_ROUTED_TO_GATEWAY_CIDRS: "10.200.0.0/16 10.64.0.0/13 10.96.0.0/11"
+      NOT_ROUTED_TO_GATEWAY_CIDRS: "10.200.0.0/16 10.64.0.0/13 10.96.0.0/11 172.22.0.0/16 172.24.0.0/16"
       VPN_LOCAL_CIDRS: "10.200.0.0/16 10.64.0.0/13 10.96.0.0/11"
-      VXLAN_IP_NETWORK: "192.168.242.0/24"
+      VXLAN_IP_NETWORK: "192.168.242"
     routed_namespaces:
       - downloads
     publicPorts:
