--- a/kubernetes/cluster/apps/cert-manager/cert-manager/letsencrypt-production-cf.yaml
+++ b/kubernetes/cluster/apps/cert-manager/cert-manager/letsencrypt-production-cf.yaml
@@ -6,13 +6,13 @@ metadata:
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
-    email: "cloudflare@anthonytam.me"
+    email: "letsencrypt@anthonytam.me"
     privateKeySecretRef:
       name: letsencrypt-production
     solvers:
       - dns01:
           cloudflare:
-            email: "${email}"
+            email: "cloudflare@anthonytam.me"
             apiTokenSecretRef:
               name: cloudlare-api-secret
               key: cloudflare-api-key
