Added hass to new cluster

--- a/kubernetes/cluster/apps/smart-home/esphome/helm-release.yaml
+++ b/kubernetes/cluster/apps/smart-home/esphome/helm-release.yaml
@@ -37,5 +37,5 @@ spec:
     persistence:
       config:
         enabled: true
-        storageClass: esxi01-storage-class
+        existingClaim: esphome-pvc
         mountPath: /config
