--- a/kubernetes/cluster/apps/smart-home/hass/helm-release.yaml
+++ b/kubernetes/cluster/apps/smart-home/hass/helm-release.yaml
@@ -43,5 +43,5 @@ spec:
     persistence:
       config:
         enabled: true
-        storageClass: esxi01-storage-class
+        existingClaim: homeassistant-pvc
         mountPath: /config
