--- a/kubernetes/cluster/apps/crypto/bitcoind/helm-release.yaml
+++ b/kubernetes/cluster/apps/crypto/bitcoind/helm-release.yaml
@@ -38,12 +38,10 @@ spec:
       main:
         enabled: true
         annotations:
-          metallb.universe.tf/loadBalancerIPs: 10.200.12.1
+          metallb.universe.tf/loadBalancerIPs: 10.200.12.2
           metallb.universe.tf/allow-shared-ip: "crypto-sharing"
         type: LoadBalancer
     persistence:
       blockchain:
         enabled: true
-        storageClass: esxi01-storage-class
-        accessMode: ReadWriteOnce
-        size: 700Gi
+        exisingClaim: bitcoind-pvc
