Fixed vault path for chia keys

--- a/kubernetes/cluster/apps/crypto/chia/helm-release.yaml
+++ b/kubernetes/cluster/apps/crypto/chia/helm-release.yaml
@@ -22,9 +22,9 @@ spec:
     podAnnotations:
       vault.hashicorp.com/agent-inject: 'true'
       vault.hashicorp.com/role: 'chia-role'
-      vault.hashicorp.com/agent-inject-secret-key.txt: 'secret/crypto/chia'
+      vault.hashicorp.com/agent-inject-secret-key.txt: 'secrets/crypto/chia'
       vault.hashicorp.com/agent-inject-template-key.txt: |
-        {{- with secret "secret/crypto/chia" -}}
+        {{- with secret "secrets/crypto/chia" -}}
         {{ .Data.data.key }}
         {{- end -}}
     serviceAccount:
