--- a/kubernetes/cluster/apps/file-sharing/nextcloud/kustomization.yaml
+++ b/kubernetes/cluster/apps/file-sharing/nextcloud/kustomization.yaml
@@ -3,4 +3,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - nextcloud-db-credentials.yaml
+  - persistent-volume-claim.yaml
+  - persistent-volume-claim-data.yaml
   - helm-release.yaml
