Updated vault to use S3

--- a/kubernetes/cluster/apps/secrets/vault/helm-release.yaml
+++ b/kubernetes/cluster/apps/secrets/vault/helm-release.yaml
@@ -23,6 +23,15 @@ spec:
       serviceAccount:
         create: true
         name: vault-app
+      dataStorage:
+        enabled: false
+      extraSecretEnvironmentVars:
+        - envName: AWS_ACCESS_KEY_ID
+          secretName: vault-access-key
+          secretKey: AWS_ACCESS_KEY_ID
+        - envName: AWS_SECRET_ACCESS_KEY
+          secretName: vault-access-key
+          secretKey: AWS_SECRET_ACCESS_KEY 
       standalone:
         enabled: true
         config: |
@@ -32,8 +41,9 @@ spec:
             address = "[::]:8200"
             cluster_address = "[::]:8201"
           }
-          storage "file" {
-            path = "/vault/data"
+          storage "s3" {
+            bucket = "k8s-vault-storage"
+            region = "ca-central-1"
           }
       service:
         enabled: true
