Updated secret template

--- a/kubernetes/cluster/apps/secrets/vault/access-key-secret.yaml.sample
+++ b/kubernetes/cluster/apps/secrets/vault/access-key-secret.yaml.sample
@@ -4,6 +4,6 @@ metadata:
   name: vault-access-key
   namespace: secrets
 type: Opaque
-data:
+stringData:
   AWS_ACCESS_KEY_ID: {ACCESS KEY}
   AWS_SECRET_ACCESS_KEY: {ACCESS KEY SECRET}
