Strange DNS issue workaround

--- a/kubernetes/cluster/apps/secrets/external-secrets/helm-release.yaml
+++ b/kubernetes/cluster/apps/secrets/external-secrets/helm-release.yaml
@@ -24,4 +24,4 @@ spec:
       repository: ghcr.io/external-secrets/kubernetes-external-secrets
       tag: 8.5.5
     env:
-      VAULT_ADDR: "http://hashicorp-vault.secrets.svc.cluster.local:8200"
+      VAULT_ADDR: "http://hashicorp-vault.secrets.svc:8200"
