--- a/kubernetes/cluster/apps/admin/unifi/helm-release.yaml
+++ b/kubernetes/cluster/apps/admin/unifi/helm-release.yaml
@@ -42,3 +42,6 @@ spec:
           nfs:
             server: nfs.local.tam.land
             path: /nfs-share/unifi
+    podSecurityContext:
+      fsUser: 65534
+      fsGroup: 65534
