--- a/kubernetes/cluster/apps/smart-home/hass/helm-release.yaml
+++ b/kubernetes/cluster/apps/smart-home/hass/helm-release.yaml
@@ -43,5 +43,9 @@ spec:
     persistence:
       config:
         enabled: true
-        existingClaim: homeassistant-pvc
+        type: custom
+        volumeSpec:
+          nfs:
+            server: nfs.local.tam.land
+            path: /nfs-share/hass
         mountPath: /config
