--- a/kubernetes/cluster/apps/smart-home/esphome/helm-release.yaml
+++ b/kubernetes/cluster/apps/smart-home/esphome/helm-release.yaml
@@ -37,5 +37,9 @@ spec:
     persistence:
       config:
         enabled: true
-        existingClaim: esphome-pvc
+        type: custom
+        volumeSpec:
+          nfs:
+            server: nfs.local.tam.land
+            path: /nfs-share/esphome
         mountPath: /config
