--- a/kubernetes/kubeadm/metallb/metallb-config.yaml
+++ b/kubernetes/kubeadm/metallb/metallb-config.yaml
@@ -1,18 +1,28 @@
-apiVersion: v1
-kind: ConfigMap
+apiVersion: metallb.io/v1beta2
+kind: BGPPeer
 metadata:
+  name: pf01
   namespace: metallb-system
-  name: config
-data:
-  config: |
-    peers:
-    - peer-address: 10.200.11.1
-      peer-asn: 4200000010
-      my-asn: 4200000020
-    address-pools:
-    - name: default
-      protocol: bgp
-      addresses:
-      - 10.200.12.0/27
-      bgp-advertisements:
-      - aggregation-length: 27
+spec:
+  myASN: 4200000020
+  peerASN: 4200000010
+  peerAddress: 10.200.11.1
+---
+apiVersion: metallb.io/v1beta1
+kind: IPAddressPool
+metadata:
+  name: default
+  namespace: metallb-system
+spec:
+  addresses:
+  - 10.200.12.0/27
+---
+apiVersion: metallb.io/v1beta1
+kind: BGPAdvertisement
+metadata:
+  name: pf01-advertisement
+  namespace: metallb-system
+spec:
+  ipAddressPools:
+  - default
+  aggregationLength: 27
