--- a/kubernetes/cluster/apps/file-sharing/nextcloud/helm-release.yaml
+++ b/kubernetes/cluster/apps/file-sharing/nextcloud/helm-release.yaml
@@ -29,10 +29,10 @@ spec:
       pullPolicy: IfNotPresent
     persistence:
       enabled: true
-      existingClaim: nextcloud-pvc
+      existingClaim: nextcloud-nfs-pvc
       nextcloudData:
         enabled: true
-        existingClaim: nextcloud-data-pvc
+        existingClaim: nextcloud-data-nfs-pvc
     ingress:
       enabled: true
       annotations: {}
@@ -48,7 +48,7 @@ spec:
     externalDatabase:
       enabled: true
       type: postgresql
-      host: postgres-general-postgresql.database.svc.cluster.local:5432
+      host: postgres-general-postgresql.database.svc:5432
       database: nextcloud
       existingSecret:
         enabled: true
