--- a/kubernetes/cluster/apps/file-sharing/nextcloud/persistent-volume-claim.yaml
+++ b/kubernetes/cluster/apps/file-sharing/nextcloud/persistent-volume-claim.yaml
@@ -1,11 +1,26 @@
 apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: nextcloud-nfs-pv
+spec:
+  storageClassName: nextcloud-nfs-manual
+  capacity:
+    storage: 20Gi
+  accessModes:
+    - ReadWriteMany
+  nfs:
+    server: nfs.local.tam.land
+    path: "/nfs-share/nextcloud"
+---
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nextcloud-pvc
+  name: nextcloud-nfs-pvc
   namespace: file-sharing
 spec:
+  storageClassName: nextcloud-nfs-manual
+  accessModes:
+    - ReadWriteMany
   resources:
     requests:
-      storage: 30Gi
-  accessModes:
-    - ReadWriteOnce
+      storage: 20Gi
