--- a/kubernetes/cluster/apps/file-sharing/nextcloud/helm-release.yaml
+++ b/kubernetes/cluster/apps/file-sharing/nextcloud/helm-release.yaml
@@ -59,6 +59,8 @@ spec:
       host: cloud.tam.land
     phpClientHttpsFix:
       enabled: true
+    cronjob:
+      enabled: true
     # Temp solution from Issue #10 to prevent installation failures
     livenessProbe:
       enabled: false
