--- a/kubernetes/cluster/apps/vpn-gateway/helm-release.yaml
+++ b/kubernetes/cluster/apps/vpn-gateway/helm-release.yaml
@@ -25,6 +25,13 @@ spec:
     serviceAccount:
       create: true
       name: vpn-app
+    persistence:
+      config:
+        enabled: true
+        type: secret
+        name: vpn-credentials 
+        mountPath: /secrets
+        readOnly: true
     settings:
       VPN_INTERFACE: tun0
       VPN_BLOCK_OTHER_TRAFFIC: true
@@ -87,7 +94,7 @@ spec:
 
           remote-cert-tls server
 
-          auth-user-pass /vpn-auth.txt
+          auth-user-pass /secret/vpn-auth.txt
 
           verb 3
           pull
