Use K8S@H Shared config

--- a/kubernetes/cluster/apps/vpn-gateway/helm-release.yaml
+++ b/kubernetes/cluster/apps/vpn-gateway/helm-release.yaml
@@ -26,7 +26,7 @@ spec:
       create: true
       name: vpn-app
     persistence:
-      credentials:
+      shared:
         enabled: true
         type: secret
         name: vpn-credentials 
