Added bjw-s helm repo

--- a/kubernetes/cluster/flux-bootstrap/helm-repos/kustomization.yaml
+++ b/kubernetes/cluster/flux-bootstrap/helm-repos/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - anthonytam.yaml
   - appscode.yaml
   - bitnami.yaml
+  - bjw-s.yaml
   - blockchain-charts.yaml
   - external-secrets.yaml
   - factorio-helm.yaml
