--- a/kubernetes/cluster/apps/admin/netboot/helm-release.yaml
+++ b/kubernetes/cluster/apps/admin/netboot/helm-release.yaml
@@ -69,6 +69,7 @@ spec:
     persistence:
       config:
         enabled: true
+        type: custom
         mountPath: /config
         volumeSpec:
           nfs:
