Missing db host

--- a/kubernetes/cluster/apps/retro-repair/mediawiki/helm-release.yaml
+++ b/kubernetes/cluster/apps/retro-repair/mediawiki/helm-release.yaml
@@ -40,4 +40,5 @@ spec:
       enabled: false
     externalDatabase:
       existingSecret: mediawiki-credentials
+      host: mariadb.retro-repair.svc.cluster.local
 
