--- a/kubernetes/cluster/apps/retro-repair/wikijs/wikijs-password-secret.yaml
+++ b/kubernetes/cluster/apps/retro-repair/wikijs/wikijs-password-secret.yaml
@@ -1,12 +1,11 @@
----
 apiVersion: 'kubernetes-client.io/v1'
 kind: ExternalSecret
 metadata:
-  name: mediawiki-credentials
+  name: wikijs-credentials
   namespace: retro-repair
 spec:
   backendType: vault
   vaultMountPoint: kubernetes
   vaultRole: external-secrets-role
   dataFrom:
-    - secrets/data/retro-repair/mediawiki
+    - secrets/data/retro-repair/wikijs
