--- a/kubernetes/cluster/apps/retro-repair/postgres/postgres-password-secret.yaml
+++ b/kubernetes/cluster/apps/retro-repair/postgres/postgres-password-secret.yaml
@@ -2,11 +2,11 @@
 apiVersion: 'kubernetes-client.io/v1'
 kind: ExternalSecret
 metadata:
-  name: mariadb-credentials
+  name: postgres-credentials
   namespace: retro-repair
 spec:
   backendType: vault
   vaultMountPoint: kubernetes
   vaultRole: external-secrets-role
   dataFrom:
-    - secrets/data/retro-repair/mariadb
+    - secrets/data/retro-repair/postgres
