--- a/kubernetes/cluster/apps/retro-repair/postgres/kustomization.yaml
+++ b/kubernetes/cluster/apps/retro-repair/postgres/kustomization.yaml
@@ -2,6 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - mariadb-password-secret.yaml
+  - postgres-password-secret.yaml
   - persistent-volume.yaml
   - helm-release.yaml
