--- a/kubernetes/cluster/apps/retro-repair/postgres/persistent-volume.yaml
+++ b/kubernetes/cluster/apps/retro-repair/postgres/persistent-volume.yaml
@@ -1,24 +1,24 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: mariadb-nfs-pv
+  name: retro-repair-postgres-nfs-pv
 spec:
-  storageClassName: mariadb-nfs-manual
+  storageClassName: retro-repair-postgres-nfs-manual
   capacity:
     storage: 20Gi
   accessModes:
     - ReadWriteMany
   nfs:
     server: nfs.local.tam.land
-    path: "/nfs-share/mariadb"
+    path: "/nfs-share/retro-repair-postgres"
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mariadb-nfs-pvc
+  name: retro-repair-postgres-nfs-pvc
   namespace: retro-repair
 spec:
-  storageClassName: mariadb-nfs-manual
+  storageClassName: retro-repair-postgres-nfs-manual
   accessModes:
     - ReadWriteMany
   resources:
