--- a/kubernetes/cluster/apps/secrets/vault/helm-release.yaml
+++ b/kubernetes/cluster/apps/secrets/vault/helm-release.yaml
@@ -45,6 +45,10 @@ spec:
             bucket = "k8s-vault-storage"
             region = "ca-central-1"
           }
+          seal "awskms" {
+            kms_key_id = "2bc6eab4-0cce-4096-87e7-17f1b8f74790",
+            region = "ca-central-1"
+          }
       service:
         enabled: true
         type: ClusterIP
