--- a/kubernetes/cluster/apps/other-webapps/wikijs/wikijs-password-secret.yaml
+++ b/kubernetes/cluster/apps/other-webapps/wikijs/wikijs-password-secret.yaml
@@ -1,8 +1,8 @@
 apiVersion: 'kubernetes-client.io/v1'
 kind: ExternalSecret
 metadata:
-  name: wikijs-credentials
-  namespace: 
+  name: wikijs-home-credentials
+  namespace: other-webapps 
 spec:
   backendType: vault
   vaultMountPoint: kubernetes
