--- a/kubernetes/cluster/apps/secrets/cluster-secrets/tamland-tls-clustersecret.yaml
+++ b/kubernetes/cluster/apps/secrets/cluster-secrets/tamland-tls-clustersecret.yaml
@@ -8,6 +8,7 @@ matchNamespace:
   - other-webapps
   - password-management
   - smart-home
+  - small-indie-bot
 avoidNamespaces:
   - 'admin'
   - 'default'
