Disabled default service

--- a/kubernetes/cluster/apps/small-indie-bot/bot/helm-release.yaml
+++ b/kubernetes/cluster/apps/small-indie-bot/bot/helm-release.yaml
@@ -24,8 +24,9 @@ spec:
     image:
       repository: registry.local.tam.land/small-indie-bot/bot
       tag: latest
-    env:
-      TZ: America/Toronto
+    service:
+      main:
+        enabled: false
     persistence:
       config:
         enabled: true
