This wasnt RFC 1123 compliant, sorry

--- a/kubernetes/cluster/apps/games/spaceengineers/helm-release.yaml
+++ b/kubernetes/cluster/apps/games/spaceengineers/helm-release.yaml
@@ -37,7 +37,7 @@ spec:
         ports:
           http:
             enabled: false
-          gameServer:
+          gameserver:
             enabled: true
             port: 27016
             protocol: UDP
