--- a/kubernetes/cluster/apps/games/spaceengineers/helm-release.yaml
+++ b/kubernetes/cluster/apps/games/spaceengineers/helm-release.yaml
@@ -27,6 +27,13 @@ spec:
     env:
       WINEDEBUG: "-all"
       INSTANCE_NAME: "TamLand"
+    probes:
+      liveness:
+        enabled: false
+      readiness:
+        enabled: false
+      startup:
+        enabled: false
     service:
       main:
         enabled: true
