--- a/kubernetes/cluster/apps/cert-manager/cert-manager-sync/kustomization.yaml
+++ b/kubernetes/cluster/apps/cert-manager/cert-manager-sync/kustomization.yaml
@@ -2,6 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - cert-manager
-  - cert-manager-sync
-  - namespace.yaml
+  - service-account.yaml
+  - cluster-role.yaml
+  - deployment.yaml
